samples/_failures_safe/1761791256_fe2674_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c90ee385.c: In function ‘main’:
./samples/SAFE/__tmp_c90ee385.c:161:17: error: expected declaration or statement at end of input
  161 |                 if (response[0] == 'n' || response[0] == 'N') {
      |                 ^~
./samples/SAFE/__tmp_c90ee385.c:161:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c90ee385.c:161:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c90ee385.c:161:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c90ee385.c:161:17: error: expected declaration or statement at end of input
